add nvenc and improved logging

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,10 @@ RESOLUTION=1920x1080
 FPS=30
 PRESET=veryfast
 
-# Hardware Acceleration (none, videotoolbox, vaapi)
-# videotoolbox - macOS hardware encoding
-# vaapi - Linux hardware encoding (requires compatible GPU)
+# Hardware Acceleration (none, videotoolbox, vaapi, nvenc)
+# videotoolbox - macOS hardware encoding (Apple Silicon/Intel with T2)
+# vaapi - Linux hardware encoding (Intel/AMD GPUs)
+# nvenc - NVIDIA hardware encoding (requires CUDA-enabled FFmpeg)
 # none - software encoding (slower but works everywhere)
 HW_ACCEL=none
 
